Fix error in docs/main.css
code.key font-style was set to "none", but should have been "normal"

--- a/docs/main.css
+++ b/docs/main.css
@@ -128,7 +128,7 @@ code.key, code.value {
 }
 code.key {
   font-weight: bold;
-  font-style: none;
+  font-style: normal;
 }
 code.value {
   font-style: normal;
